# controllers/UserController.js
@@ -4,7 +4,7 @@ const helper = require('../helper/common-helper');
 const logger = require('../helper/logger-helper');
 const bcrypt = require('bcrypt-nodejs');
 const moment = require('moment');
-
+const crypto = require("crypto");
 const editProfile = async(req,res) =>{  
         try{
             const user_id = req.decoded.user_id;
@@ -78,6 +78,12 @@ const signUp = async(req, res) => {
                     console.log(err)
                 }    
             }
+			let template = "WelcomeEmail.html";
+			let to_id = email,
+			subject = req.messages.MAIL_SUBJECT.WELCOME_MAIL,
+			template_name = template,
+			replacements = { user: req.body.fullName, url:req.BASE_URL_FRONTEND, date: moment(new Date()).format("MMMM Do YYYY") };
+			helper.sendEmail(process.env.mailFrom, to_id, subject, template_name, replacements);
 	  	  return res.status(req.constants.HTTP_SUCCESS).json({ status: req.constants.SUCCESS, code: req.constants.HTTP_SUCCESS, message: req.messages.SIGNUP.SUCCESS});  
          }               
     } catch (error) {
@@ -164,10 +170,15 @@ const getUser = async(req, res) => {
   try {    
       let userId=req.decoded.user_id
       let findUser = await req.models.user.findOne({
+        attributes:{exclude:['password']},
         where: {
           id: userId
         },
-        attributes:{exclude:['password']}
+        include:[{
+        	model:req.models.user_images,
+            attributes:['name', 'image_path'],
+        	
+        }]
       });
         if(findUser)
         {
@@ -175,7 +186,8 @@ const getUser = async(req, res) => {
             code: req.constants.HTTP_SUCCESS,
             status: req.constants.SUCCESS,
             message: req.messages.USER_PROFILE.SUCCESS,
-            data:findUser
+            data:findUser,
+            s3url:process.env.BUCKET_ACCESS_URL
           }) 
         }
         else{
@@ -186,7 +198,7 @@ const getUser = async(req, res) => {
             message: req.messages.USER_PROFILE.UNSUCCESSFULL,
             })
         }
-      }catch(err){
+      }catch(err){ //console.log(err);
         logger.log('getUser', req, err, 'user', userId);
         res.status(req.constants.HTTP_SERVER_ERROR).json({
           status: req.constants.ERROR,
@@ -195,68 +207,7 @@ const getUser = async(req, res) => {
         })
     }
   }
-  
-  const forgotPassword =  async(req, res) => {
-    let userName = req.body.userName;
-    let oldPassword = req.body.oldPassword;
-    let password = bcrypt.hashSync(req.body.password, 10);
-    try {
-        const foundUser = await req.models.user.findOne({
-        	where: { userName: userName, isDeleted : 0 },
-      	});
-      	let response = JSON.parse(JSON.stringify(foundUser, null, 4));
-      	if(response){
-		    let comparedPassword = await bcrypt.compare(oldPassword, response.password);
-		    if (comparedPassword) {
-		            foundUser["password"] = password;
-				    let isUpdate = await foundUser.save();
-				    if(isUpdate){
-				    	return res.status(req.constants.HTTP_SUCCESS).send({
-							code: req.constants.HTTP_SUCCESS,
-							status: req.constants.SUCCESS,
-							message: req.messages.FORGOT_PASSWORD.SUCCESS
-						}) 	
-				    }else{
-						return res.status(req.constants.HTTP_NOT_EXISTS).json({
-							status: req.constants.ERROR,
-							code: req.constants.HTTP_NOT_EXISTS,
-							message: req.messages.FORGOT_PASSWORD.FAILURE
-						});
-				    }
-				
-		    } else {
-		      logger.log('Forgot Password', req, {
-		        status: req.constants.ERROR,
-		        code: req.constants.HTTP_NOT_EXISTS,
-		        message: req.messages.LOGIN.FAILURE
-		      }, 'guest', 0);
-			  return res.status(req.constants.HTTP_NOT_EXISTS).json({
-				 status: req.constants.ERROR,
-				 code: req.constants.HTTP_NOT_EXISTS,
-				 message: req.messages.FORGOT_PASSWORD.FAILURE
-			   });
-		    }
-      } else {
-        logger.log('Forgot Password', req, {
-          status: req.constants.ERROR,
-          code: req.constants.HTTP_NOT_EXISTS,
-          message: req.messages.LOGIN.NOT_FOUND
-        }, 'guest', 0);
-        res.status(req.constants.HTTP_NOT_EXISTS).json({
-          status: req.constants.ERROR,
-          code: req.constants.HTTP_NOT_EXISTS,
-          message: req.messages.LOGIN.NOT_FOUND
-        })
-      }
-    } catch (err) {
-      logger.log('Forgot Password', req, err, 'guest', 0);
-      res.status(req.constants.HTTP_SERVER_ERROR).json({
-        status: req.constants.ERROR,
-        code: req.constants.HTTP_SERVER_ERROR,
-        message: req.messages.INTERNAL500 + err
-      })
-    }
-  }
+
   
   
    const logout = async function(req, res) {
@@ -295,11 +246,152 @@ const getUser = async(req, res) => {
     }
 
   }
+  
+   
+  const forgotPassword = async(req, res) => {
+    try {
+      let userName = req.body.userName;
+      let userInfoQuery = `SELECT id,email, fullName from users where userName =  '${userName}'`
+      let userInfo = await req.database.query(userInfoQuery, { type: req.database.QueryTypes.SELECT });
+      if (userInfo.length > 0) {
+          userInfo = userInfo[0];
+          let token = userName + userInfo.id;
+          let resetPasswordToken = crypto.createHash('sha256').update(token).digest('hex');
+          let resetPasswordExpires = (new Date()).getTime();
+          await req.models.user.update({ resetPasswordToken: resetPasswordToken, resetPasswordExpires: resetPasswordExpires }, { where: { id: userInfo.id } })
+          let resetLink = req.BASE_URL_FRONTEND + "reset-password" + "/" + resetPasswordToken;
+          let name = userInfo.fullName;
+          let template = "ForgotPassword.html";
+          let to_id = userInfo.email,
+            subject = req.messages.MAIL_SUBJECT.PASSWORD_RESET,
+            template_name = template,
+            replacements = { user: name, resetLink: resetLink, date: moment(new Date()).format("MMMM Do YYYY") };
+           helper.sendEmail(process.env.mailFrom, to_id, subject, template_name, replacements);
+           return res.status(req.constants.HTTP_SUCCESS).json({ status: req.constants.SUCCESS, code: req.constants.HTTP_SUCCESS, message: req.messages.FORGOT_PASSWORD.FOLLOW_EMAIL })
+        
+      } else {
+        logger.log('Forgot Password', req, { status: req.constants.ERROR, code: req.constants.HTTP_BAD_REQUEST, message: req.messages.USER.NOT_FOUND }, 'user', 0);
+
+        return res.status(req.constants.HTTP_NOT_EXISTS).json({ status: req.constants.ERROR, code: req.constants.HTTP_BAD_REQUEST, message: req.messages.USER.NOT_FOUND })
+      }
+    } catch (err) {
+      logger.log('Forgot Password', req, err, 'user', req.decoded.user_id);
+      return res.status(req.constants.HTTP_SERVER_ERROR).json({ status: req.constants.ERROR, code: req.constants.HTTP_SERVER_ERROR, message: req.messages.INTERNAL500 + err })
+    }
+  }
+  const verifyResetToken = async(req, res) => {
+    try {
+      let resetToken = req.params.token,
+        userInfo = await req.models.user.findOne({ where: { resetPasswordToken: resetToken } });
+      if (userInfo != null) {
+        let expTime = 86400000, // 1 Day
+          expiresIn = userInfo.resetPasswordExpires,
+          currTime = (new Date()).getTime(),
+          timeDiff = Math.ceil((Math.abs(currTime - expiresIn) / 1000) % 60);
+        if (timeDiff > expTime) {
+          res.status(401).send({
+            status: false,
+            code: 401,
+            message: req.messages.RESET_TOKEN.EXPIRED
+          });
+        } else {
+          res.status(req.constants.HTTP_SUCCESS).json({ status: req.constants.SUCCESS, code: req.constants.HTTP_SUCCESS, message: req.messages.RESET_TOKEN.VERIFIED });
+        }
+      } else {
+        logger.log('Verify Reset Token', req, { status: req.constants.ERROR, code: req.constants.HTTP_BAD_REQUEST, message: req.messages.RESET_TOKEN.UN_AUTHORIZED }, 'user', 0);
+        res.status(req.constants.HTTP_FORBIDDEN).json({ status: req.constants.ERROR, code: req.constants.HTTP_BAD_REQUEST, message: req.messages.RESET_TOKEN.UN_AUTHORIZED })
+      }
+    } catch (err) {
+      logger.log('Verify Reset Token', req, err, 'user', 0);
+      res.status(req.constants.HTTP_SERVER_ERROR).json({ status: req.constants.ERROR, code: req.constants.HTTP_SERVER_ERROR, message: req.messages.INTERNAL500 + err })
+    }
+  }
+  const resetPassword = async(req, res) => {
+    try {
+      let resetToken = req.params.token,
+        password = req.body.password,
+        userInfo = await req.models.user.findOne({ where: { resetPasswordToken: resetToken } });
+      if (userInfo != null) {
+        let expTime = 86400000, // 1 Day
+          expiresIn = userInfo.resetPasswordExpires,
+          currTime = (new Date()).getTime(),
+          timeDiff = Math.ceil((Math.abs(currTime - expiresIn) / 1000) % 60);
+        if (timeDiff > expTime) {
+          return res.status(req.constants.HTTP_NOT_EXISTS).send({
+            status: false,
+            code: req.constants.HTTP_NOT_EXISTS,
+            message: req.messages.RESET_TOKEN.EXPIRED
+          });
+        } else {
+          await req.models.user.update({ password: bcrypt.hashSync(password), resetPasswordToken: '', resetToken: '' }, { where: { id: userInfo.id } });
+          return res.status(req.constants.HTTP_SUCCESS).json({
+            status: req.constants.SUCCESS,
+            code: req.constants.HTTP_SUCCESS,
+            message: req.messages.USER.PASSWORD_UPDATED
+          });
+        }
+      } else {
+        logger.log('Reset Password', req, { status: req.constants.ERROR, code: req.constants.HTTP_BAD_REQUEST, message: req.messages.RESET_TOKEN.EXPIRED }, 'user', 0);
+        return res.status(req.constants.HTTP_BAD_REQUEST).json({ status: req.constants.ERROR, code: req.constants.HTTP_BAD_REQUEST, message: req.messages.RESET_TOKEN.EXPIRED })
+      }
+    } catch (err) {
+      logger.log('Reset Password', req, err, 'user', 0);
+      res.status(req.constants.HTTP_SERVER_ERROR).json({ status: req.constants.ERROR, code: req.constants.HTTP_SERVER_ERROR, message: req.messages.INTERNAL500 + err })
+    }
+  }
+  const changePassword =  async(req, res, next) => {
+    try {
+      let id = req.decoded.user_id;
+      let old_password = req.body.oldPassword;
+      let new_password = req.body.newPassword;
+      let userInfo = await req.models.user.findOne({
+        where: {
+          id: id
+        }
+      });
+      userInfo = JSON.parse(JSON.stringify(userInfo));
+      if (userInfo) {
+        let comparedPassword = await bcrypt.compareSync(old_password, userInfo.password);
+        if (comparedPassword) {
+          compareNewPassword = await bcrypt.compareSync(new_password, userInfo.password);
+          if (compareNewPassword) {
+            return res.status(req.constants.HTTP_BAD_REQUEST).json({ status: req.constants.ERROR, code: req.constants.HTTP_BAD_REQUEST, message: req.messages.CHANGE_PASSWORD.PROMT_NEW_PASSWORD })
+          } else {
+            let isUpdated = await req.models.user.update({
+              password: await bcrypt.hashSync(new_password)
+            }, {
+              where: {
+                id: id
+              }
+            });
+            return res.status(req.constants.HTTP_SUCCESS).json({ status: req.constants.SUCCESS, code: req.constants.HTTP_SUCCESS, message: req.messages.CHANGE_PASSWORD.SUCCESSFUL })
+          }
+        } else {
+          logger.log('Change Password', req, { status: req.constants.ERROR, code: req.constants.HTTP_BAD_REQUEST, message: req.messages.CHANGE_PASSWORD.OLD_INCORRECT }, 'user', req.decoded.user_id);
+         return res.status(req.constants.HTTP_BAD_REQUEST).json({ status: req.constants.ERROR, code: req.constants.HTTP_BAD_REQUEST, message: req.messages.CHANGE_PASSWORD.OLD_INCORRECT })
+        }
+      } else {
+        logger.log('Change Password', req, { status: req.constants.ERROR, code: req.constants.HTTP_NOT_EXISTS, message: req.messages.USER.NOT_FOUND }, 'user', req.decoded.user_id);
+        return res.status(req.constants.HTTP_NOT_EXISTS).json({ status: req.constants.ERROR, code: req.constants.HTTP_NOT_EXISTS, message: req.messages.USER.NOT_FOUND })
+      }
+
+    } catch (err) {
+      logger.log('Change Password', req, err, 'user', req.decoded.user_id);
+      return res.status(req.constants.HTTP_SERVER_ERROR).json({ status: req.constants.ERROR, code: req.constants.HTTP_SERVER_ERROR, message: req.messages.INTERNAL500 + err })
+    }
+  }
+ 
+  
+  
 module.exports = {
 login,
 signUp, 
 editProfile,
 logout,
+getUser,
 forgotPassword,
-getUser
+verifyResetToken,
+resetPassword,
+changePassword
+
 };
